feat: add headless mode support in Hooks